# ellm

./: .gitignore  Makefile  README.md  env.yml  pyproject.toml  requirements.txt  rm-service.yaml  serving.yaml  sync-my.sh  sync-sg.sh  values.yaml
benchmark/: dpo_online.py
ellm/: actor.py  args.py  exploration.py  interface.py  learner.py  model.py  preference.py  ray_utils.py  rm.py  types.py  utils.py
ellm/baselines/: apl.py  rs.py  xpo.py
ellm/learners/: __init__.py  base.py  dap.py  dap_with_rm.py  loss.py  offline_dap.py
ellm/oracles/: __init__.py  base.py  gpt.py  pair.py  scalar.py
ellm/rm/: backbone.py  ensemble.py  model.py  networks.py  optim.py  uncertainty.py
ellm/utils/: buffer.py  data.py  deepspeed.py  distributed.py  ipc.py  launcher.py  setup.py
experiment/: main.py  offline.py  offline_lp.py  run_apl.py  run_rs.py  run_xpo.py  toy.py
notebooks/: test_uncertainty.ipynb  test_uncertainty_pair.ipynb  test_uncertainty_simple.ipynb
notebooks/plotting/: analysis.ipynb  bench.ipynb  exp_strategies.ipynb  fig1.ipynb  main.ipynb  (+2 more)
scripts/: evaluate.py  readiness.sh  test.sh
tests/: alpaca_eval.py  best_of_n.py  lp_actor.py  lp_example.py  lp_learner.py  offline_train_rm_ensemble.py  offline_train_rm_sgld.py  prepare_alpaca_eval.py  prepare_dataset.py  test_actor.py  test_apl.py  test_deberta_backbone.py  test_nccl.py  test_new_rm.py  test_openai_api.py  test_prompt.py  test_rm.py  test_rm_backbone.py  test_rm_score.py  test_rm_server.py  test_rm_sync.py  test_uncertainty.py  test_vllm_offload.py  test_weight_synchronization.py  vllm_cpu.py
(+3 files in other folders)
