[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ellm"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Zichen", email = "liuzc@sea.com"} ,
  { name = "Changyu", email = "chency@sea.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Zichen/ellm#readme"
Issues = "https://github.com/Zichen/ellm/issues"
Source = "https://github.com/Zichen/ellm"

[tool.hatch.version]
path = "ellm/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:ellm tests}"

[tool.coverage.run]
source_pkgs = ["ellm", "tests"]
branch = true
parallel = true
omit = [
  "ellm/__about__.py",
]

[tool.coverage.paths]
ellm = ["ellm", "*/ellm/ellm"]
tests = ["tests", "*/ellm/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
